--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![Travis build status](https://travis-ci.com/AObaied/Calphad2.5.svg?branch=master)](https://travis-ci.com/AObaied/Calphad2.5)
 <!-- badges: end -->
 
-The goal of Calphad2.5 is to ...
+The goal of Calphad2.5 is to Genarate Cp and S desriptions below room temperature, using only two input parameters (Cp298, S298)
 
 ## Installation
 
@@ -29,27 +29,21 @@ You can install the released version of Calphad2.5 from [CRAN](https://CRAN.R-pr
 install.packages("Calphad2.5")
 ```
 
-## Example
+## Example - Pure Si
 
-This is a basic example which shows you how to solve a common problem:
+Temp dependent solution:
 
-```{r example}
+```{r example_T_Dep, warning=FALSE}
 library(Calphad2.5)
-## basic example code
+
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+## Example - Pure Al
 
-```{r cars}
-summary(cars)
+Linear Cp solution:
+
+```{r example_b_sol, warning=FALSE}
+library(Calphad2.5)
+
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
