output table update

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ install.packages("Calphad2.5")
 
 ## Example - Pure Si
 
-Temp dependent solution:
+Temp. dependent solution:
 
 ```{r example_T_Dep_solution, warning=FALSE}
 library(Calphad2.5)
