Update the Table output (added the polynomials parameters)

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,11 +31,11 @@ install.packages("Calphad2.5")
 
 ## Example - Pure Si
 
-Temp. dependent solution:
+Temp dependent solution:
 
 ```{r example_T_Dep_solution, warning=FALSE}
 library(Calphad2.5)
-Calphad_2.5("Si", CP298 = 20,	S298 = 18.82)
+Calculate("Si", CP298 = 20,	S298 = 18.82)
 ```
 
 ## Example - Pure Al
@@ -44,6 +44,6 @@ Temp dependent solution:
 
 ```{r example_Linear_solution, warning=FALSE}
 library(Calphad2.5)
-Calphad_2.5("Al",  CP298 = 24.209,	S298 = 28.275)
+Calculate("Al",  CP298 = 24.209, S298 = 28.275)
 ```
 
