--- a/README.Rmd
+++ b/README.Rmd
@@ -49,7 +49,7 @@ library(Calphad2.5)
 Calculate("Al",  CP298 = 24.209, S298 = 28.275)
 ```
 
-## Example - Pure Al - Calulate and Plot Heat capacity and Entropy
+## Example - Pure Al - Calculate and Plot Heat capacity and Entropy
 
 Temp dependent solution:
 
@@ -73,7 +73,7 @@ points(298.15, 28.275)
 
 ```
 
-## Example - Pure Si - Calulate and Plot Heat capacity and Entropy
+## Example - Pure Si - Calculate and Plot Heat capacity and Entropy
 
 Temp dependent solution:
 
